<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_today">

    <fragment
        android:id="@+id/navigation_today"
        android:name="com.example.myapplication.ui.today.TodayFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_today" />

    <fragment
        android:id="@+id/navigation_record"
        android:name="com.example.myapplication.ui.record.RecordFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_record" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.myapplication.ui.profile.ProfileFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_profile" />

</navigation>
